Fix typos in ContractNegotiation mock objects and update exception handler for consistency